--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2017,9 +2017,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if isinstance(loaded_texts_json, list):  # Case 1: List of dictionaries\n",
+    "if isinstance(loaded_texts_json, list):\n",
     "    df = pd.DataFrame(loaded_texts_json)\n",
-    "elif isinstance(loaded_texts_json, dict):  # Case 2: Dictionary of scalars\n",
+    "elif isinstance(loaded_texts_json, dict):\n",
     "    df = pd.DataFrame([\n",
     "        {\"file_name\": key, \"text\": value} for key, value in loaded_texts_json.items()\n",
     "    ])\n",
