--- a/notebooks/fine_tuning.ipynb
+++ b/notebooks/fine_tuning.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Define a tokenizer\n",
     "tokenizer = tiktoken.get_encoding(\"cl100k_base\")  # Using OpenAI's tokenizer\n",
-    "max_chunk_size = 512  # Choose chunk size based on LLaMA's context window"
+    "max_chunk_size = 512"
    ]
   },
   {
@@ -86,13 +86,11 @@
     }
    ],
    "source": [
-    "# Apply chunking with a single progress bar\n",
     "chunked_data = []\n",
     "total_files = len(df)\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "# Using tqdm to show progress bar for files\n",
     "with tqdm(total=total_files, desc=\"Chunking Progress\", unit=\"file\") as pbar:\n",
     "    for _, row in df.iterrows():\n",
     "        file_name = row[\"file_name\"]\n",
@@ -106,7 +104,6 @@
     "        else:\n",
     "            print(f\"Skipping file {file_name} due to invalid text.\")\n",
     "        \n",
-    "        # Update the progress bar after each file\n",
     "        pbar.update(1)\n",
     "    \n",
     "    # Calculate time left and show it dynamically\n",
@@ -167,9 +164,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create FAISS index with correct dimensionality\n",
-    "d = 384  # Match the SentenceTransformer output\n",
-    "index = faiss.IndexFlatL2(d)  # L2 distance for similarity"
+    "# Create FAISS index\n",
+    "d = 384\n",
+    "index = faiss.IndexFlatL2(d)"
    ]
   },
   {
@@ -186,17 +183,14 @@
     }
    ],
    "source": [
-    "# Apply embedding generation with progress bar\n",
     "chunked_data_with_embeddings = []\n",
     "total_chunks = len(chunked_df)\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "# Using tqdm for progress bar\n",
     "with tqdm(total=total_chunks, desc=\"Generating Embeddings\", unit=\"chunk\") as pbar:\n",
     "    batch_size = 32  # Adjust the batch size based on available memory\n",
     "\n",
-    "    # Process in batches for better performance\n",
     "    for i in range(0, total_chunks, batch_size):\n",
     "        batch_texts = chunked_df[\"text\"].iloc[i:i + batch_size].tolist()\n",
     "        embeddings = generate_embeddings(batch_texts)\n",
@@ -207,10 +201,9 @@
     "                \"file_name\": chunked_df[\"file_name\"].iloc[i + j],\n",
     "                \"chunk_id\": chunked_df[\"chunk_id\"].iloc[i + j],\n",
     "                \"text\": chunked_df[\"text\"].iloc[i + j],\n",
-    "                \"embedding\": emb.cpu().numpy()  # Convert tensor to numpy array\n",
+    "                \"embedding\": emb.cpu().numpy()\n",
     "            })\n",
     "        \n",
-    "        # Update progress bar\n",
     "        pbar.update(batch_size)"
    ]
   },
@@ -260,9 +253,9 @@
     "# Convert string embeddings back to NumPy arrays\n",
     "def parse_embedding(embedding_str):\n",
     "    try:\n",
-    "        return np.array(ast.literal_eval(embedding_str), dtype=np.float32)  # Ensures float32 format\n",
+    "        return np.array(ast.literal_eval(embedding_str), dtype=np.float32)\n",
     "    except:\n",
-    "        return np.zeros(384, dtype=np.float32)  # Use zero vector for any malformed data"
+    "        return np.zeros(384, dtype=np.float32)"
    ]
   },
   {
@@ -379,7 +372,7 @@
     "    \"\"\"\n",
     "    # Convert query to embedding\n",
     "    query_embedding = embedding_model.encode([query])  # Convert query to embedding\n",
-    "    query_embedding = np.array(query_embedding, dtype=np.float32)  # Ensure float32 format\n",
+    "    query_embedding = np.array(query_embedding, dtype=np.float32)\n",
     "\n",
     "    # Search FAISS index for closest matches\n",
     "    distances, indices = index.search(query_embedding, top_k)\n",
@@ -387,7 +380,7 @@
     "    # Retrieve the top matching cases\n",
     "    retrieved_cases = []\n",
     "    for i in range(top_k):\n",
-    "        if indices[0][i] < len(metadata):  # Ensure index is within bounds\n",
+    "        if indices[0][i] < len(metadata):\n",
     "            retrieved_cases.append(metadata[indices[0][i]])\n",
     "\n",
     "    return retrieved_cases"
