--- a/notebooks/fine_tuning.ipynb
+++ b/notebooks/fine_tuning.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,33 +371,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve_relevant_cases(query, top_k=5):\n",
-    "    \"\"\"\n",
-    "    Given a legal query, find the most relevant law case chunks using FAISS.\n",
-    "    \"\"\"\n",
-    "    # Convert query to embedding\n",
-    "    query_embedding = embedding_model.encode([query])  # Convert query to embedding\n",
-    "    query_embedding = np.array(query_embedding, dtype=np.float32)\n",
+    "    # Convert query into an embedding\n",
+    "    query_embedding = embedding_model.encode([query])\n",
+    "    query_embedding = np.array(query_embedding, dtype=np.float32)  \n",
     "\n",
-    "    # Search FAISS index for closest matches\n",
-    "    distances, indices = index.search(query_embedding, top_k)\n",
+    "    # Search FAISS for top 10 matches (to get diversity)\n",
+    "    distances, indices = index.search(query_embedding, top_k * 3)  \n",
     "\n",
-    "    # Retrieve the top matching cases\n",
-    "    retrieved_cases = []\n",
-    "    for i in range(top_k):\n",
-    "        if indices[0][i] < len(metadata):\n",
-    "            retrieved_cases.append(metadata[indices[0][i]])\n",
+    "    # Keep track of unique documents\n",
+    "    unique_cases = {}\n",
+    "    \n",
+    "    for i in range(len(indices[0])):\n",
+    "        idx = indices[0][i]\n",
+    "        if idx < len(metadata):  # Ensure index is valid\n",
+    "            case = metadata[idx]\n",
+    "            file_name = case[\"file_name\"]\n",
+    "            \n",
+    "            if file_name not in unique_cases:  # Add only if not already included\n",
+    "                unique_cases[file_name] = case\n",
     "\n",
-    "    return retrieved_cases"
+    "            if len(unique_cases) == top_k:  # Stop when we have top_k unique documents\n",
+    "                break\n",
+    "\n",
+    "    return list(unique_cases.values())  # Return only unique cases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -440,17 +455,26 @@
      "text": [
       "🔷 AI Legal Assistant Response:\n",
       "\n",
-      "It appears that you have provided a lengthy document related to a court case or dispute between individuals, rather than asking about the legal rights of a tenant in a lease agreement dispute.\n",
+      "Based on general principles of law and the cases provided, I'll address the query. Please note that specific provisions may vary depending on jurisdiction (in this case, Sri Lanka).\n",
       "\n",
-      "To provide an answer to your original question, here are some general legal rights that a tenant may have in a lease agreement dispute:\n",
+      "In general, when it comes to a lease agreement dispute, the rights of a tenant can be summarized as follows:\n",
       "\n",
-      "1. Right to quiet enjoyment: A tenant has the right to occupy and use the rented property without interference or disturbance from the landlord.\n",
-      "2. Right to notice of termination: A tenant is entitled to written notice before their tenancy can be terminated, unless the lease agreement specifies otherwise.\n",
-      "3. Right to security deposit refund: At the end of a tenancy, a tenant may be entitled to a refund of their security deposit, minus any damages or deductions allowed by law.\n",
-      "4. Right to inspection and repairs: A tenant has the right to inspect and report on any necessary repairs, and to request that they be made in a timely manner.\n",
-      "5. Right to termination notice requirements: In some jurisdictions, tenants have specific rights regarding the timing and content of termination notices.\n",
+      "1. **Right to Quiet Possession**: The tenant has the right to peaceful enjoyment of the property during the tenancy period. This means they should not be disturbed or evicted without proper notice and due process.\n",
+      "2. **Right to Repairs and Maintenance**: The landlord is responsible for maintaining the property in a habitable condition. If repairs are necessary, the tenant can request the landlord to take action.\n",
+      "3. **Right to Receive Rent Payments**: The tenant has the right to receive rent payments as agreed upon in the lease agreement. However, if there's a dispute over rent or late payment fees, the tenant may seek mediation or legal recourse.\n",
+      "4. **Right to Terminate Lease**: If the landlord breaches the terms of the lease (e.g., fails to provide essential services), the tenant can terminate the lease without penalty.\n",
       "\n",
-      "These are general examples, and the specific legal rights of a tenant can vary depending on the jurisdiction, lease agreement terms, and local laws. If you would like more information or clarification on this topic, please let me know!\n"
+      "In Case 1 (SC Application Special Vs. [Expulsion] No. 01/2009), the petitioner, Ameer Ali Shihabdeen, was a member of the Sri Lanka Muslim Congress and had been elected as a Member of Parliament. While this case doesn't directly address tenant rights in lease disputes, it highlights the importance of adherence to constitutional procedures and due process.\n",
+      "\n",
+      "Case 2 (SC/TAB No. 01A-01F/2017) is a criminal appeal case involving six accused individuals. This case does not pertain to lease agreements or tenant rights.\n",
+      "\n",
+      "Considering these cases and general principles of law, I can provide the following answer:\n",
+      "\n",
+      "**Answer:**\n",
+      "\n",
+      "In Sri Lanka, a tenant in a lease agreement dispute has the right to peaceful possession (quiet enjoyment), repairs and maintenance from the landlord, receive rent payments as agreed upon, and terminate the lease if there's a breach by the landlord. If a tenant is facing issues related to their lease, they can seek mediation or legal recourse through relevant authorities.\n",
+      "\n",
+      "Please note that this answer may not be exhaustive and might require further clarification based on specific circumstances or local regulations.\n"
      ]
     }
    ],
@@ -462,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -472,10 +496,7 @@
       "\n",
       "🔷 Top Matching Case Files:\n",
       "📄 012009.pdf\n",
-      "📄 012009.pdf\n",
-      "📄 012009.pdf\n",
-      "📄 012009.pdf\n",
-      "📄 012009.pdf\n"
+      "📄 01a_01f_2017_tab.pdf\n"
      ]
     }
    ],
