--- a/notebooks/fine_tuning.ipynb
+++ b/notebooks/fine_tuning.ipynb
@@ -26,7 +26,9 @@
     "import ollama\n",
     "from langchain_ollama import OllamaLLM\n",
     "import ast\n",
-    "import pickle"
+    "import pickle\n",
+    "import time\n",
+    "import psutil"
    ]
   },
   {
