--- a/notebooks/fine_tuning.ipynb
+++ b/notebooks/fine_tuning.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
@@ -28,12 +19,13 @@
     "import ast\n",
     "import pickle\n",
     "import time\n",
-    "import psutil"
+    "import psutil\n",
+    "import evaluate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +35,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the CSV file\n",
     "df = pd.read_csv(\"eda_law_cases.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['How does the Supreme Court differentiate between an interlocutory order and a final order in civil appeals?', 'What is the legal significance of the immunity granted to Attorneys-at-Law regarding statements made in pleadings?', 'In tax disputes, how should conflicts between two statutes be resolved?', 'How does Sri Lankan law determine the ‘value’ of shares for stamp duty purposes?']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the true questions and answers\n",
+    "qa_data = pd.read_csv(\"../data/processed/Questions & Answers.csv\")\n",
+    "questions = qa_data[\"question\"].tolist()\n",
+    "print(questions)"
    ]
   },
   {
@@ -60,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +83,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Chunking Progress:  96%|█████████▌| 1833/1910 [00:48<00:01, 51.40file/s]"
+      "Chunking Progress:   5%|▌         | 157/2988 [00:02<00:27, 101.36file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_ba_43_2011.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  12%|█▏        | 347/2988 [00:03<00:20, 130.85file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_dc_horana_563_96_f.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  14%|█▍        | 433/2988 [00:04<00:19, 130.54file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_dc_matara_05_97.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  16%|█▋        | 493/2988 [00:05<00:19, 130.11file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_dc_panadura_416_92.pdf due to invalid text.\n",
+      "Skipping file ca_dc_ratnapura_646_99.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  22%|██▏       | 669/2988 [00:06<00:09, 237.09file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_pa_26_2011.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  26%|██▌       | 769/2988 [00:06<00:07, 285.31file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_phc_apn_27_2012.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  29%|██▉       | 880/2988 [00:07<00:09, 213.17file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_writ_1591_06.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  34%|███▍      | 1011/2988 [00:07<00:10, 190.68file/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping file ca_writ_603_10.pdf due to invalid text.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Chunking Progress:  97%|█████████▋| 2910/2988 [00:58<00:01, 47.48file/s] "
      ]
     },
     {
@@ -92,7 +217,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Chunking Progress: 100%|██████████| 1910/1910 [00:50<00:00, 37.70file/s, remaining=0.00s]\n"
+      "Chunking Progress: 100%|██████████| 2988/2988 [01:00<00:00, 49.53file/s, remaining=0.00s]\n"
      ]
     }
    ],
@@ -125,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert questions to embeddings\n",
+    "query_vectors = np.array(model.encode(questions, convert_to_numpy=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating Embeddings:   3%|▎         | 896/30646 [01:20<44:51, 11.05chunk/s] "
+      "Generating Embeddings: 35008chunk [1:00:30,  9.64chunk/s]                        \n"
      ]
     }
    ],
@@ -220,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +540,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform FAISS search for the questions\n",
+    "k = 1  # Get only the top result\n",
+    "_, ground_truth_indices = index.search(query_vectors, k)\n",
+    "\n",
+    "# Flatten the array since FAISS returns a list of lists\n",
+    "ground_truth_indices = ground_truth_indices.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_faiss_index(index, query_vectors, ground_truth_indices, k=5):\n",
+    "    \"\"\"Evaluates FAISS retrieval performance\"\"\"\n",
+    "    start_time = time.time()\n",
+    "    cpu_usage_before = psutil.cpu_percent(interval=None)\n",
+    "    \n",
+    "    _, retrieved_indices = index.search(query_vectors, k)\n",
+    "    \n",
+    "    cpu_usage_after = psutil.cpu_percent(interval=None)\n",
+    "    response_time = time.time() - start_time\n",
+    "\n",
+    "    # Calculate accuracy (percentage of ground truth indices found in retrieved indices)\n",
+    "    correct_retrievals = sum([1 for gt, retrieved in zip(ground_truth_indices, retrieved_indices) if gt in retrieved])\n",
+    "    accuracy = correct_retrievals / len(ground_truth_indices)\n",
+    "\n",
+    "    print(f\"FAISS Evaluation:\\n- Response Time: {response_time:.4f}s\\n- CPU Usage: {cpu_usage_after - cpu_usage_before:.2f}%\\n- Accuracy: {accuracy:.2%}\")\n",
+    "    return response_time, cpu_usage_after - cpu_usage_before, accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FAISS Evaluation:\n",
+      "- Response Time: 0.0094s\n",
+      "- CPU Usage: 47.30%\n",
+      "- Accuracy: 100.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "response_time, cpu_usage, accuracy = evaluate_faiss_index(index, query_vectors, ground_truth_indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation With Llama Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,6 +634,196 @@
     "    response = llm.invoke(prompt)\n",
     "\n",
     "    return response, relevant_cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load evaluation dataset\n",
+    "qa_data = pd.read_csv(\"../data/processed/Questions & Answers.csv\")\n",
+    "questions = qa_data[\"question\"].tolist()\n",
+    "ground_truth_answers = qa_data[\"answer\"].tolist()  # True legal answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Track execution time\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Initialize empty lists\n",
+    "llm_responses = []\n",
+    "retrieved_cases = []\n",
+    "\n",
+    "# Monitor system resource usage\n",
+    "cpu_usage_list = []\n",
+    "memory_usage_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Questions:  25%|██▌       | 1/4 [21:24<1:04:13, 1284.46s/question]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 1/4 | Time: 1284.46s | CPU: 33.15% | Memory: 82.90%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Questions:  50%|█████     | 2/4 [34:36<33:09, 994.63s/question]   "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 2/4 | Time: 791.71s | CPU: 40.85% | Memory: 87.95%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Questions:  75%|███████▌  | 3/4 [43:12<12:56, 776.24s/question]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 3/4 | Time: 516.35s | CPU: 43.30% | Memory: 86.55%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Questions: 100%|██████████| 4/4 [53:53<00:00, 808.30s/question]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 4/4 | Time: 640.64s | CPU: 33.00% | Memory: 86.60%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Process each question with a progress bar\n",
+    "for i, question in enumerate(tqdm(questions, desc=\"Processing Questions\", unit=\"question\")):\n",
+    "    question_start_time = time.time()  # Track time for each question\n",
+    "\n",
+    "    # Record CPU & memory usage before processing\n",
+    "    cpu_before = psutil.cpu_percent(interval=None)\n",
+    "    memory_before = psutil.virtual_memory().percent\n",
+    "\n",
+    "    # Generate response using LLaMA\n",
+    "    response, matched_cases = generate_response_with_llama(question)\n",
+    "    \n",
+    "    # Store results\n",
+    "    llm_responses.append(response)\n",
+    "    retrieved_cases.append(matched_cases)\n",
+    "\n",
+    "    # Record CPU & memory usage after processing\n",
+    "    cpu_after = psutil.cpu_percent(interval=None)\n",
+    "    memory_after = psutil.virtual_memory().percent\n",
+    "\n",
+    "    # Compute stats\n",
+    "    avg_cpu = (cpu_before + cpu_after) / 2\n",
+    "    avg_memory = (memory_before + memory_after) / 2\n",
+    "    elapsed_time_per_question = time.time() - question_start_time\n",
+    "\n",
+    "    # Append to lists\n",
+    "    cpu_usage_list.append(avg_cpu)\n",
+    "    memory_usage_list.append(avg_memory)\n",
+    "\n",
+    "    # Print log after every question\n",
+    "    print(f\"✅ Completed {i + 1}/{len(questions)} | Time: {elapsed_time_per_question:.2f}s | \"\n",
+    "          f\"CPU: {avg_cpu:.2f}% | Memory: {avg_memory:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ All 4 questions processed in 3680.47 seconds.\n",
+      "📊 Final Average CPU Usage: 37.58%\n",
+      "📊 Final Average Memory Usage: 86.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Final execution time\n",
+    "total_time = time.time() - start_time\n",
+    "final_cpu_usage = sum(cpu_usage_list) / len(cpu_usage_list)\n",
+    "final_memory_usage = sum(memory_usage_list) / len(memory_usage_list)\n",
+    "\n",
+    "print(f\"\\n✅ All {len(questions)} questions processed in {total_time:.2f} seconds.\")\n",
+    "print(f\"📊 Final Average CPU Usage: {final_cpu_usage:.2f}%\")\n",
+    "print(f\"📊 Final Average Memory Usage: {final_memory_usage:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load ROUGE for text comparison\n",
+    "rouge = evaluate.load(\"rouge\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLaMA Response Evaluation: {'rouge1': 0.21996053611837663, 'rouge2': 0.06654455294784305, 'rougeL': 0.14734921260779954, 'rougeLsum': 0.16019937901302683}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate responses\n",
+    "llm_evaluation = rouge.compute(predictions=llm_responses, references=ground_truth_answers)\n",
+    "\n",
+    "print(\"LLaMA Response Evaluation:\", llm_evaluation)"
    ]
   },
   {
