Done the evaluation with Graph RAG

--- a/notebooks/graph_rag.ipynb
+++ b/notebooks/graph_rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,12 +27,16 @@
     "from langchain_ollama import OllamaLLM\n",
     "import ast\n",
     "import pickle\n",
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "import psutil\n",
+    "from bert_score import score\n",
+    "from rouge import Rouge\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,20 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "According to the provided text, the legal precedent for contract breaches is as follows:\n",
+      "The legal precedent for contract breaches in this case is that a party who breaks a contract does not discharge the other party's obligations, but rather gives the injured party the option to either:\n",
       "\n",
-      "* A breach of contract gives the injured party a right to either compel the guilty party to perform their promise (specific performance) or sue them for damages.\n",
-      "* Even a breach sufficient to effect a discharge does not itself discharge the contract, but merely gives the other party an option to decide whether they will treat the contract as discharged.\n",
-      "* The injured party may sue for damages at once without awaiting the date fixed for performance and in the case of an obligation entitling them to specific performance, they may ask for this relief.\n",
+      "1. Compel the guilty party to perform their promise (specific performance)\n",
+      "2. Sue them for damages\n",
       "\n",
-      "This is based on the statements made by Weeramantry (Vol. II, p. 884) who says that even a breach sufficient to effect a discharge does not itself discharge the contract, but merely gives the other party an option to decide whether he will treat the contract as discharged. Should they elect to do so, he may sue for damages at once without awaiting the date fixed for performance and in the case of an obligation entitling him to specific performance, he may ask for this relief.\n"
+      "In this specific case, the Plaintiff continued to offer payment of the balance consideration and kept the contract \"alive\" beyond the period of three months, indicating that they did not accept the anticipatory breach by the 1st Defendant as a discharge of the obligations of the agreement to sell.\n",
+      "\n",
+      "Therefore, the legal precedent is that even a breach sufficient to effect a discharge does not itself discharge the contract, but merely gives the other party an option to decide whether they will treat the contract as discharged.\n"
      ]
     }
    ],
@@ -164,29 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The provided text appears to be a court judgment or opinion rather than a straightforward question-and-answer format. However, I can extract relevant points related to intellectual property from it and provide an answer in a Q&A style based on those points.\n",
-      "\n",
-      "**Q: What are the implications of case law on intellectual property?**\n",
-      "\n",
-      "A: The case law discussed in this text emphasizes the importance of clearly framing issues during a trial for the court to determine. In the context of intellectual property, specifically under section 9 and section 10(1)(a) of the Intellectual Property Act, it implies that plaintiffs must ensure their cause of action includes specific claims regarding infringement rights.\n",
-      "\n",
-      "**Q: What happens if the plaintiffs' pleadings do not explicitly state an issue regarding the defendant's infringement under section 9?**\n",
-      "\n",
-      "A: The court may not consider or grant declarations related to such infringement even if mentioned in the plaint, as emphasized by De Silva CJ. This highlights the importance of specific and clear framing of issues during a trial.\n",
-      "\n",
-      "**Q: What does this mean for obtaining intellectual property rights violations claims?**\n",
-      "\n",
-      "A: It underscores the need for plaintiffs to be meticulous in drafting their pleadings to include all relevant claims they wish the court to consider, especially when it comes to infringement under different sections of intellectual property laws.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def query_llama_graph_rag(query):\n",
     "    context = expand_graph_rag(query)\n",
@@ -195,9 +180,251 @@
     "        {\"role\": \"system\", \"content\": \"You are a legal AI assistant trained on case law using Graph RAG.\"},\n",
     "        {\"role\": \"user\", \"content\": f\"Use this context:\\n{context}\\n\\nQuestion: {query}\"}\n",
     "    ])\n",
-    "    return response['message']['content']\n",
-    "\n",
-    "print(query_llama_graph_rag(\"What are the implications of case law on intellectual property?\"))"
+    "    return response['message']['content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluation\n",
+    "def measure_performance(query, answer):\n",
+    "    start_time = time.time()\n",
+    "    cpu_before = psutil.cpu_percent(interval=None)\n",
+    "    memory_before = psutil.virtual_memory().percent\n",
+    "    \n",
+    "    generated_answer = query_llama_graph_rag(query)\n",
+    "    \n",
+    "    cpu_after = psutil.cpu_percent(interval=None)\n",
+    "    memory_after = psutil.virtual_memory().percent\n",
+    "    end_time = time.time()\n",
+    "    \n",
+    "    response_time = end_time - start_time\n",
+    "    avg_cpu_usage = (cpu_before + cpu_after) / 2\n",
+    "    avg_memory_usage = (memory_before + memory_after) / 2\n",
+    "    \n",
+    "    rouge = Rouge()\n",
+    "    rouge_scores = rouge.get_scores(generated_answer, answer)[0]\n",
+    "    \n",
+    "    P, R, F1 = score([generated_answer], [answer], lang=\"en\")\n",
+    "    bert_score = F1.mean().item()\n",
+    "    \n",
+    "    return response_time, avg_cpu_usage, avg_memory_usage, rouge_scores, bert_score, generated_answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load evaluation dataset\n",
+    "eval_df = pd.read_csv(\"../data/processed/Questions & Answers.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "cpu_usage_list = []\n",
+    "memory_usage_list = []\n",
+    "llm_responses = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Questions:   0%|          | 0/4 [00:00<?, ?question/s]Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Processing Questions:  25%|██▌       | 1/4 [34:36<1:43:49, 2076.58s/question]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 1/4 | Time: 2069.73s | CPU: 34.50% | Memory: 72.40%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Processing Questions:  50%|█████     | 2/4 [1:24:02<1:26:39, 2599.69s/question]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 2/4 | Time: 2959.34s | CPU: 55.20% | Memory: 91.50%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Processing Questions:  75%|███████▌  | 3/4 [2:12:14<45:33, 2733.24s/question]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 3/4 | Time: 2881.47s | CPU: 58.70% | Memory: 89.55%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Processing Questions: 100%|██████████| 4/4 [2:42:17<00:00, 2434.27s/question]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Completed 4/4 | Time: 1798.56s | CPU: 59.05% | Memory: 87.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "for i, row in tqdm(eval_df.iterrows(), total=len(eval_df), desc=\"Processing Questions\", unit=\"question\"):\n",
+    "    response_time, avg_cpu_usage, avg_memory_usage, rouge_scores, bert_score, generated_answer = measure_performance(row['question'], row['answer'])\n",
+    "    \n",
+    "    result = {\n",
+    "        \"question\": row['question'],\n",
+    "        \"response\": generated_answer,\n",
+    "        \"response_time\": response_time,\n",
+    "        \"cpu_usage\": avg_cpu_usage,\n",
+    "        \"memory_usage\": avg_memory_usage,\n",
+    "        \"rouge_scores\": rouge_scores,\n",
+    "        \"bert_score\": bert_score\n",
+    "    }\n",
+    "    results.append(result)\n",
+    "    cpu_usage_list.append(avg_cpu_usage)\n",
+    "    memory_usage_list.append(avg_memory_usage)\n",
+    "    llm_responses.append(generated_answer)\n",
+    "    \n",
+    "    print(f\"✅ Completed {i + 1}/{len(eval_df)} | Time: {response_time:.2f}s | CPU: {avg_cpu_usage:.2f}% | Memory: {avg_memory_usage:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute final stats\n",
+    "total_time = time.time() - start_time\n",
+    "final_cpu_usage = sum(cpu_usage_list) / len(cpu_usage_list)\n",
+    "final_memory_usage = sum(memory_usage_list) / len(memory_usage_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract ROUGE score keys\n",
+    "rouge_keys = results[0][\"rouge_scores\"].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute average ROUGE scores\n",
+    "avg_rouge = {\n",
+    "    k: sum(r[\"rouge_scores\"][k][\"f\"] for r in results) / len(results) for k in rouge_keys\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute average BERTScore\n",
+    "avg_bert_score = sum(r[\"bert_score\"] for r in results) / len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if isinstance(results[0][\"bert_score\"], float):\n",
+    "    # If it's a float, assume it's the F1 score and set precision & recall to the same value\n",
+    "    avg_bert_precision = avg_bert_recall = avg_bert_f1 = sum(r[\"bert_score\"] for r in results) / len(results)\n",
+    "else:\n",
+    "    # If it's a dictionary, compute proper averages\n",
+    "    avg_bert_precision = sum(r[\"bert_score\"][\"precision\"] for r in results) / len(results)\n",
+    "    avg_bert_recall = sum(r[\"bert_score\"][\"recall\"] for r in results) / len(results)\n",
+    "    avg_bert_f1 = sum(r[\"bert_score\"][\"f1\"] for r in results) / len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ All 4 questions processed in 14153.64 seconds.\n",
+      "📊 Final Average CPU Usage: 51.86%\n",
+      "📊 Final Average Memory Usage: 85.11%\n",
+      "📊 Final Average ROUGE Scores: {'rouge-1': 0.2978928795317439, 'rouge-2': 0.08846930858822495, 'rouge-l': 0.2780273975007121}\n",
+      "📊 Final Average BERTScore: 0.8590720742940903\n",
+      "📊 Final BERTScore Precision: 0.8591\n",
+      "📊 Final BERTScore Recall: 0.8591\n",
+      "📊 Final BERTScore F1-score: 0.8591\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\n✅ All {len(eval_df)} questions processed in {total_time:.2f} seconds.\")\n",
+    "print(f\"📊 Final Average CPU Usage: {final_cpu_usage:.2f}%\")\n",
+    "print(f\"📊 Final Average Memory Usage: {final_memory_usage:.2f}%\")\n",
+    "print(f\"📊 Final Average ROUGE Scores: {avg_rouge}\")\n",
+    "print(f\"📊 Final Average BERTScore: {avg_bert_score}\")\n",
+    "print(f\"📊 Final BERTScore Precision: {avg_bert_precision:.4f}\")\n",
+    "print(f\"📊 Final BERTScore Recall: {avg_bert_recall:.4f}\")\n",
+    "print(f\"📊 Final BERTScore F1-score: {avg_bert_f1:.4f}\")"
    ]
   }
  ],
