--- a/notebooks/arad.ipynb
+++ b/notebooks/arad.ipynb
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a7606e23",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the chunked legal cases dataset\n",
-    "chunked_cases_df = pd.read_csv(\"chunked_law_cases.csv\")"
+    "chunked_cases_df = pd.read_csv(\"src/chunked_law_cases.csv\")"
    ]
   },
   {
@@ -287,12 +287,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4881f629",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_df.to_csv(\"llama3.1_arad_multihop_evaluation.csv\", index=False)"
+    "results_df.to_csv(\"src/llama3.1_arad_multihop_evaluation.csv\", index=False)"
    ]
   },
   {
@@ -477,12 +477,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0a7e308d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "few_shot_df.to_csv(\"llama3.1_arad_multihop_few_shot.csv\", index=False)"
+    "few_shot_df.to_csv(\"src/llama3.1_arad_multihop_few_shot.csv\", index=False)"
    ]
   },
   {
@@ -495,14 +495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0598eaeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample structure if you're loading from CSVs\n",
-    "zero_shot_df = pd.read_csv(\"llama3.1_arad_multihop_evaluation.csv\")\n",
-    "few_shot_df = pd.read_csv(\"llama3.1_arad_multihop_few_shot.csv\")"
+    "zero_shot_df = pd.read_csv(\"src/llama3.1_arad_multihop_evaluation.csv\")\n",
+    "few_shot_df = pd.read_csv(\"src/llama3.1_arad_multihop_few_shot.csv\")"
    ]
   },
   {
