--- a/notebooks/fine_tuning.ipynb
+++ b/notebooks/fine_tuning.ipynb
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the CSV file\n",
-    "df = pd.read_csv(\"eda_law_cases.csv\")"
+    "df = pd.read_csv(\"src/eda_law_cases.csv\")"
    ]
   },
   {
@@ -260,12 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the chunked data\n",
-    "chunked_df.to_csv(\"chunked_law_cases.csv\", index=False)\n",
+    "chunked_df.to_csv(\"src/chunked_law_cases.csv\", index=False)\n",
     "end_time = time.time()"
    ]
   },
@@ -278,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunked_df = pd.read_csv(\"chunked_law_cases.csv\")"
+    "chunked_df = pd.read_csv(\"src/chunked_law_cases.csv\")"
    ]
   },
   {
@@ -365,12 +365,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the embeddings to disk\n",
-    "embedding_df.to_csv(\"law_cases_with_embeddings.csv\", index=False)"
+    "embedding_df.to_csv(\"src/law_cases_with_embeddings.csv\", index=False)"
    ]
   },
   {
@@ -382,12 +382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the chunked data with embeddings\n",
-    "embedding_df = pd.read_csv(\"law_cases_with_embeddings.csv\")"
+    "embedding_df = pd.read_csv(\"src/law_cases_with_embeddings.csv\")"
    ]
   },
   {
