--- a/notebooks/graph_rag.ipynb
+++ b/notebooks/graph_rag.ipynb
@@ -46,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = SentenceTransformer('all-MiniLM-L6-v2')  # Efficient embedding model\n",
-    "chunked_df = pd.read_csv(\"chunked_law_cases.csv\")"
+    "chunked_df = pd.read_csv(\"src/chunked_law_cases.csv\")"
    ]
   },
   {
