--- a/notebooks/logical_reasoning.ipynb
+++ b/notebooks/logical_reasoning.ipynb
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the chunked legal cases dataset\n",
-    "chunked_cases_df = pd.read_csv(\"chunked_law_cases.csv\")"
+    "chunked_cases_df = pd.read_csv(\"src/chunked_law_cases.csv\")"
    ]
   },
   {
