--- a/notebooks/majority_voting.ipynb
+++ b/notebooks/majority_voting.ipynb
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "320610ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the chunked legal cases dataset\n",
-    "chunked_cases_df = pd.read_csv(\"chunked_law_cases.csv\")"
+    "chunked_cases_df = pd.read_csv(\"src/chunked_law_cases.csv\")"
    ]
   },
   {
