--- a/notebooks/multi_hop_reasoning.ipynb
+++ b/notebooks/multi_hop_reasoning.ipynb
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cd978d4d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the chunked legal cases dataset\n",
-    "chunked_cases_df = pd.read_csv(\"chunked_law_cases.csv\")"
+    "chunked_cases_df = pd.read_csv(\"src/chunked_law_cases.csv\")"
    ]
   },
   {
